Form2 / 주소록 수정 ver.3

--- a/winform_SMS/winform_SMS/winform_SMS.csproj
+++ b/winform_SMS/winform_SMS/winform_SMS.csproj
@@ -208,6 +208,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Content Include="TextFile1.txt" />
     <Content Include="winformsms-firebase-adminsdk-7dyve-b38ad43492.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
